[refactored] biblesChapters module
