# ecclesiast-api/src/modules/biblesChapters/router/hash/index.ts
@@ -1,51 +1,0 @@
-// Core
-import { NextFunction, Request, Response } from "express";
-// Libs
-import dg from "debug";
-// Instruments
-import { Controller } from "../../controller";
-
-const debug = dg("router:biblesChapters:hash");
-
-export const getById = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-  debug(`${ req.method } - ${ req.originalUrl }`);
-
-  try {
-    const { _id } = req.params;
-    const controller = new Controller();
-    const data = await controller.getById(_id);
-
-    res.status(200).json(data);
-  } catch (error) {
-    next(error);
-  }
-};
-
-export const updateById = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-  debug(`${ req.method } - ${ req.originalUrl }`);
-
-  try {
-    const { _id } = req.params;
-    const payload = req.body;
-    const controller = new Controller();
-    const data = await controller.updateById(_id, payload);
-
-    res.status(200).json(data);
-  } catch (error) {
-    next(error);
-  }
-};
-
-export const removeById = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-  debug(`${ req.method } - ${ req.originalUrl }`);
-
-  try {
-    const { _id } = req.params;
-    const controller = new Controller();
-    const data = await controller.removeById(_id);
-
-    res.status(200).json(data);
-  } catch (error) {
-    next(error);
-  }
-};
