# ecclesiast-api/src/modules/biblesChapters/router/route.ts
@@ -1,35 +1,8 @@
-// Core
-import { NextFunction, Request, Response } from "express";
-// Libs
-import dg from "debug";
 // Controllers
 import { Controller } from "../controller";
+// Common
+import { getCRUDRoutes } from "../../../core";
+// Constants
+import { COLLECTION_NAME } from "../constants";
 
-const debug = dg("router:biblesChapters");
-
-export const get = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-  debug(`${ req.method } - ${ req.originalUrl }`);
-
-  try {
-    const controller = new Controller();
-    const data = await controller.getAll();
-
-    res.status(200).json(data);
-  } catch (error) {
-    next(error);
-  }
-};
-
-export const post = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
-  debug(`${ req.method } - ${ req.originalUrl }`);
-
-  try {
-    const payload = req.body;
-    const controller = new Controller();
-    const data = await controller.create(payload);
-
-    res.status(200).json(data);
-  } catch (error) {
-    next(error);
-  }
-};
+export const { get, post, getById, updateById, removeById } = getCRUDRoutes(Controller, COLLECTION_NAME);
