# ecclesiast-api/src/modules/biblesChapters/schemas/types.ts
@@ -1,0 +1,6 @@
+// Types
+import { JSONSchemaType } from "ajv";
+import { BibleChapter } from "../odm";
+
+export type BiblesChaptersCommonSchemeType = JSONSchemaType<BibleChapter>;
+export type BiblesChaptersSchemasType = BiblesChaptersCommonSchemeType;
