# ecclesiast-api/swagger.json
@@ -83,6 +83,17 @@
           }
         }
       },
+      "BibleChapter": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "number"
+          }
+        },
+        "example": {
+          "name": 1
+        }
+      },
       "Locale": {
         "type": "object",
         "properties": {
@@ -175,6 +186,17 @@
           "application/json": {
             "schema": {
               "$ref": "#/components/schemas/AuthSignIn"
+            }
+          }
+        }
+      },
+      "BibleChapterCreate": {
+        "description": "Create new bible chapter body",
+        "required": true,
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/BibleChapter"
             }
           }
         }
@@ -447,6 +469,139 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/bibles-chapters": {
+      "get": {
+        "tags": [
+          "BiblesChapters"
+        ],
+        "summary": "Get list of all bibles chapters",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "pagination": {
+                      "$ref": "#/components/schemas/Pagination"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "allOf": [
+                          {
+                            "$ref": "#/components/schemas/ID"
+                          },
+                          {
+                            "$ref": "#/components/schemas/BibleChapter"
+                          }
+                        ]
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "BiblesChapters"
+        ],
+        "summary": "Create bible chapter",
+        "requestBody": {
+          "$ref": "#/components/requestBodies/BibleChapterCreate"
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/bibles-chapters/{_id}": {
+      "get": {
+        "tags": [
+          "BiblesChapters"
+        ],
+        "summary": "Get one bible chapter by id",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/ID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/ID"
+                    },
+                    {
+                      "$ref": "#/components/schemas/BibleChapter"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "BiblesChapters"
+        ],
+        "summary": "Update one bible chapter",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/ID"
+          }
+        ],
+        "requestBody": {
+          "$ref": "#/components/requestBodies/BibleChapterCreate"
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/ID"
+                    },
+                    {
+                      "$ref": "#/components/schemas/BibleChapter"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "BiblesChapters"
+        ],
+        "summary": "Delete one bible chapter",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/ID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
           }
         }
       }
@@ -726,6 +881,10 @@
     {
       "name": "Auth",
       "description": "APIs to handle auth resources."
+    },
+    {
+      "name": "BiblesChapters",
+      "description": "APIs to handle bibles chapters resources."
     },
     {
       "name": "Locales",
